# afx-nuke-plugins

./: README.md
COMPILED/MAC/15.0v8/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
COMPILED/MAC/15.1v10/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
COMPILED/MAC/15.2v6/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
COMPILED/MAC/16.0v6/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
COMPILED/MAC/16.1v1/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
COMPILED/MAC/17.0v1/: AFXDeSpill.dylib  AFXMedian.dylib  AFXSoftClip.dylib  AFXToneMap.dylib
LINUX_FILES/: CMakeLists.txt  building_step_by_step.txt
LINUX_FILES/cmake/Modules/: FindHoard.cmake  FindIlmBase.cmake  FindIpp.cmake  FindNuke.cmake
LINUX_FILES/include/: cuda_helper_NEW.h
LINUX_FILES/src/: CMakeLists.txt  afx_glow.cpp  afx_soft_clip.cpp  afx_tone_map.cpp  cuda_helper_NEW.cpp  threading.cpp
Linux/: readme.md
MAC_FILES/: AFX process.txt  CMakeLists.txt
MAC_FILES/include/: bounds.h  image.h  median.h  metal_helper.h  metal_helper.mm  msvc_hacks.h
MAC_FILES/src/: MedianFilter.metal  afx_median.cpp  afx_soft_clip.cpp  afx_tone_map.cpp  metal_helper.mm
WINDOWS_FILES/: AFX process.txt  CMakeLists.txt
WINDOWS_FILES/include/: threading.h
WINDOWS_FILES/src/: afx_despill.cpp  afx_median.cpp
Windows/16.0v1/: menu.py
